--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Albus72/ajs-homeworks_1.git"
+    "url": "git+https://github.com/Albus72/ajs-homeworks_1.git",
+    "lint": "eslint ."
   },
   "keywords": [
     "game"
@@ -23,7 +24,12 @@
   "devDependencies": {
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.2",
-    "@babel/preset-env": "^7.18.2"
+    "@babel/preset-env": "^7.18.2",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
     "core-js": "^3.22.7"
